force-app/main/default/objects/Survey__c/fields/Downgrade_Explanation_Prompt__c.field-meta.xml
<CustomField>
    <fullName>Downgrade_Explanation_Prompt__c</fullName>
    <inlineHelpText>The prompt to display to the user when attempting to Downgrade the CSAT (only displayed if &quot;Require Downgrade Explanation&quot; is checked).</inlineHelpText>
    <label>Downgrade Explanation Prompt</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>