force-app/main/default/objects/Survey__c/fields/Footnotes__c.field-meta.xml
<CustomField>
    <fullName>Footnotes__c</fullName>
    <label>Footnotes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>