force-app/main/default/objects/Survey__c/fields/Instructions__c.field-meta.xml
<CustomField>
    <fullName>Instructions__c</fullName>
    <inlineHelpText>Externally visible instructions, generally displayed at the top of the survey page.</inlineHelpText>
    <label>Instructions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>