force-app/main/default/objects/Survey__c/fields/Logo__c.field-meta.xml
<CustomField>
    <fullName>Logo__c</fullName>
    <inlineHelpText>URL of custom logo for the survey. Used in the event your survey site has a need for a customizable logo (e.g. a client logo, or your own).</inlineHelpText>
    <label>Logo</label>
    <type>Url</type>
</CustomField>