force-app/main/default/objects/Survey__c/fields/Negative_Display__c.field-meta.xml
<CustomField>
    <fullName>Negative_Display__c</fullName>
    <inlineHelpText>What text to display if/when user follows link from &quot;negative&quot; button in email (URL contains csat=Negative parameter)</inlineHelpText>
    <label>Negative Display</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>