force-app/main/default/objects/Survey__c/fields/Neutral_Display__c.field-meta.xml
<CustomField>
    <fullName>Neutral_Display__c</fullName>
    <inlineHelpText>What text to display if/when user follows link from &quot;neutral&quot; button in email (URL contains csat=Neutral parameter)</inlineHelpText>
    <label>Neutral Display</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>