force-app/main/default/objects/Survey__c/fields/Positive_Display__c.field-meta.xml
<CustomField>
    <fullName>Positive_Display__c</fullName>
    <inlineHelpText>What text to display if/when user follows link from &quot;positive&quot; button in email (URL contains csat=Positive parameter)</inlineHelpText>
    <label>Positive Display</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>