force-app/main/default/objects/Survey__c/fields/Post_Submission_Display__c.field-meta.xml
<CustomField>
    <fullName>Post_Submission_Display__c</fullName>
    <inlineHelpText>This text is displayed to the survey recipient after they complete the survey.</inlineHelpText>
    <label>Post-Submission Display</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>