force-app/main/default/objects/Survey__c/fields/Primary_Color__c.field-meta.xml
<CustomField>
    <fullName>Primary_Color__c</fullName>
    <defaultValue>&quot;rgb(18,142,210)&quot;</defaultValue>
    <inlineHelpText>RGB or Hex color used for subtle styling changes in survey.</inlineHelpText>
    <label>Primary Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>