force-app/main/default/objects/Survey__c/fields/Requires_Downgrade_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Requires_Downgrade_Explanation__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box to force the respondent to have to answer the &quot;Downgrade Explanation&quot; prompt before the new CSAT is saved.</inlineHelpText>
    <label>Requires Downgrade Explanation</label>
    <type>Checkbox</type>
</CustomField>