force-app/main/default/objects/Survey__c/fields/Survey_Title__c.field-meta.xml
<CustomField>
    <fullName>Survey_Title__c</fullName>
    <inlineHelpText>Externally visible title, generally displayed at the top of the survey page.</inlineHelpText>
    <label>Survey Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>