force-app/main/default/objects/Survey__c/fields/Upgrade_Explanation_Prompt__c.field-meta.xml
<CustomField>
    <fullName>Upgrade_Explanation_Prompt__c</fullName>
    <inlineHelpText>The prompt to display to the user when attempting to Upgrade the CSAT (only displayed if &quot;Require Upgrade Explanation&quot; is checked).</inlineHelpText>
    <label>Upgrade Explanation Prompt</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>